// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match the snapshot 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 16px 0;
}

.c4 > * {
  margin-right: 16px;
}

.c4 > *:last-child {
  margin-right: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
}

.c7 {
  font-size: 24px;
  font-weight: 600;
  margin: 0;
}

.c9 {
  margin: 0;
  padding: 12px 16px;
  font-size: 14px;
}

.c11 {
  padding: 0 16px 16px;
}

.c1 {
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  box-shadow: 0px 2px 1px -1px rgba(66,66,66,0.2),0px 1px 1px 0px rgba(66,66,66,0.14),0px 1px 3px 0px rgba(66,66,66,0.12);
  background-color: #ffffff;
}

.c16 {
  pointer-events: none;
  width: 24px;
}

.c16.with-children {
  margin-right: 8px;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: undefinedpx;
  line-height: NaNpx;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c12:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c12:focus,
.c12:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c12:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c13 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c13 .c15 {
  margin-right: 0;
}

.c13:hover,
.c13:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c13:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c10 {
  font-size: 16px;
  max-height: 70vh;
  overflow-y: auto;
  padding: 16px;
}

.c5 {
  padding: 16px 16px 0;
}

.c8 {
  font-weight: 700;
  line-height: 1.25;
}

.c2 .c3 {
  padding-right: 64px;
}

.c14 {
  position: absolute;
  top: 12px;
  right: 16px;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 98;
  background-color: rgba(66,66,66,0.5);
}

@media (min-width:0px) {
  .c2 {
    width: 90%;
  }
}

@media (min-width:600px) {
  .c2 {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .c2 {
    width: 800px;
  }
}

<div
  class="c0"
  role="dialog"
>
  <article
    class="c1 c2"
    tabindex="0"
  >
    <header
      class="c3 c4 c5"
    >
      <div
        class="c6"
      >
        <h2
          class="c7 c8"
        >
          Modal title
        </h2>
      </div>
    </header>
    <div
      class="c9 c10"
    >
      Modal Content
    </div>
    <footer
      class="c11"
    >
      ModalFooter
    </footer>
    <button
      aria-label="close dialog"
      class="c12 c13 c14"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c15 c16 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </article>
</div>
`;

exports[`<Modal /> Snapshots should match the snapshot 2`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 16px 0;
}

.c3 > * {
  margin-right: 16px;
}

.c3 > *:last-child {
  margin-right: 0;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
}

.c6 {
  font-size: 24px;
  font-weight: 600;
  margin: 0;
}

.c8 {
  margin: 0;
  padding: 12px 16px;
  font-size: 14px;
}

.c10 {
  padding: 0 16px 16px;
}

.c0 {
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  box-shadow: 0px 2px 1px -1px rgba(66,66,66,0.2),0px 1px 1px 0px rgba(66,66,66,0.14),0px 1px 3px 0px rgba(66,66,66,0.12);
  background-color: #ffffff;
}

.c15 {
  pointer-events: none;
  width: 24px;
}

.c15.with-children {
  margin-right: 8px;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: undefinedpx;
  line-height: NaNpx;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c11:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c11:focus,
.c11:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c11:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c12 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c12 .c14 {
  margin-right: 0;
}

.c12:hover,
.c12:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c12:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c9 {
  font-size: 16px;
  max-height: 70vh;
  overflow-y: auto;
  padding: 16px;
}

.c4 {
  padding: 16px 16px 0;
}

.c7 {
  font-weight: 700;
  line-height: 1.25;
}

.c1 .c2 {
  padding-right: 64px;
}

.c13 {
  position: absolute;
  top: 12px;
  right: 16px;
}

@media (min-width:0px) {
  .c1 {
    width: 90%;
  }
}

@media (min-width:600px) {
  .c1 {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .c1 {
    width: 800px;
  }
}

<article
  class="c0 c1"
  tabindex="0"
>
  <header
    class="c2 c3 c4"
  >
    <div
      class="c5"
    >
      <h2
        class="c6 c7"
      >
        Modal title
      </h2>
    </div>
  </header>
  <div
    class="c8 c9"
  >
    Modal Content
  </div>
  <footer
    class="c10"
  >
    ModalFooter
  </footer>
  <button
    aria-label="close dialog"
    class="c11 c12 c13"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c14 c15 css-1696fkf-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="CloseIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</article>
`;
